--- a/notebooks/basic_calls.ipynb
+++ b/notebooks/basic_calls.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:175e1fe0930369c430b28cca92dc860fb4578e2244966c34d673c84185016938"
+  "signature": "sha256:37818438b0f73ec4330447b8062c7b5f52afd8aaac60c7dc78ed0bcc6eca7029"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,9 +15,8 @@
       "import urllib2\n",
       "\n",
       "SERVER_URL = \"https://wwwdev.ebi.ac.uk/pdbe/api\"\n",
-      "REQUEST_URL = SERVER_URL + \"/pdb/entry/summary/%s?pretty=true\"\n",
       "\n",
-      "def make_request(url, data=None):\n",
+      "def make_request(url, data):      \n",
       "    request = urllib2.Request(url)\n",
       "\n",
       "    try:\n",
@@ -30,18 +29,41 @@
       "\n",
       "        return None\n",
       "\n",
-      "    return url_file.read()\n"
+      "    return url_file.read()\n",
+      "\n",
+      "def get_request(url, arg, pretty=True):\n",
+      "    full_url = \"%s/%s/%s?pretty=%s\" % (SERVER_URL, url, arg, str(pretty).lower())\n",
+      "    \n",
+      "    return make_request(full_url, None)\n",
+      "\n",
+      "def post_request(url, data, pretty=True):\n",
+      "    full_url = \"%s/%s/?pretty=%s\" % (SERVER_URL, url, str(pretty).lower())\n",
+      "    \n",
+      "    return make_request(full_url, data)\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 51
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print make_request(REQUEST_URL % \"1cbs\")"
+      "summary = \"/pdb/entry/summary/\"\n",
+      "experiment = \"/pdb/entry/experiment/\"\n",
+      "sifts = \"/mappings/\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 52
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print get_request(summary, \"1cbs\")"
      ],
      "language": "python",
      "metadata": {},
@@ -53,7 +75,9 @@
         "{\n",
         "    \"1cbs\": [\n",
         "        {\n",
-        "            \"experimental_method\": \"X-ray diffraction\",\n",
+        "            \"experimental_method\": [\n",
+        "                \"X-ray diffraction\"\n",
+        "            ],\n",
         "            \"assemblies\": [\n",
         "                {\n",
         "                    \"form\": \"homo\",\n",
@@ -64,7 +88,9 @@
         "            \"title\": \"CRYSTAL STRUCTURE OF CELLULAR RETINOIC-ACID-BINDING PROTEINS I AND II IN COMPLEX WITH ALL-TRANS-RETINOIC ACID AND A SYNTHETIC RETINOID\",\n",
         "            \"release_date\": \"19950126\",\n",
         "            \"split_entry\": null,\n",
-        "            \"experimental_method_class\": \"x-ray\",\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"x-ray\"\n",
+        "            ],\n",
         "            \"revision_date\": \"20090224\",\n",
         "            \"entry_authors\": [\n",
         "                \"Bergfors, T.\",\n",
@@ -73,12 +99,14 @@
         "            ],\n",
         "            \"deposition_site\": null,\n",
         "            \"number_of_entities\": {\n",
+        "                \"water\": 1,\n",
         "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
         "                \"dna\": 0,\n",
         "                \"ligand\": 1,\n",
+        "                \"dna/rna\": 0,\n",
         "                \"rna\": 0,\n",
-        "                \"sugar\": 0,\n",
-        "                \"water\": 1\n",
+        "                \"sugar\": 0\n",
         "            },\n",
         "            \"deposition_date\": \"19940928\",\n",
         "            \"processing_site\": null\n",
@@ -88,7 +116,154 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 53
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print post_request(summary, \"1cbs, 1otz, 2ktn\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{\n",
+        "    \"1cbs\": [\n",
+        "        {\n",
+        "            \"experimental_method\": [\n",
+        "                \"X-ray diffraction\"\n",
+        "            ],\n",
+        "            \"assemblies\": [\n",
+        "                {\n",
+        "                    \"form\": \"homo\",\n",
+        "                    \"name\": \"monomeric\",\n",
+        "                    \"assembly_id\": \"1\"\n",
+        "                }\n",
+        "            ],\n",
+        "            \"title\": \"CRYSTAL STRUCTURE OF CELLULAR RETINOIC-ACID-BINDING PROTEINS I AND II IN COMPLEX WITH ALL-TRANS-RETINOIC ACID AND A SYNTHETIC RETINOID\",\n",
+        "            \"release_date\": \"19950126\",\n",
+        "            \"split_entry\": null,\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"x-ray\"\n",
+        "            ],\n",
+        "            \"revision_date\": \"20090224\",\n",
+        "            \"entry_authors\": [\n",
+        "                \"Bergfors, T.\",\n",
+        "                \"Jones, T.A.\",\n",
+        "                \"Kleywegt, G.J.\"\n",
+        "            ],\n",
+        "            \"deposition_site\": null,\n",
+        "            \"number_of_entities\": {\n",
+        "                \"water\": 1,\n",
+        "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
+        "                \"dna\": 0,\n",
+        "                \"ligand\": 1,\n",
+        "                \"dna/rna\": 0,\n",
+        "                \"rna\": 0,\n",
+        "                \"sugar\": 0\n",
+        "            },\n",
+        "            \"deposition_date\": \"19940928\",\n",
+        "            \"processing_site\": null\n",
+        "        }\n",
+        "    ],\n",
+        "    \"2ktn\": [\n",
+        "        {\n",
+        "            \"experimental_method\": [\n",
+        "                \"Solution NMR\"\n",
+        "            ],\n",
+        "            \"assemblies\": [\n",
+        "                {\n",
+        "                    \"form\": \"homo\",\n",
+        "                    \"name\": \"monomeric\",\n",
+        "                    \"assembly_id\": \"1\"\n",
+        "                }\n",
+        "            ],\n",
+        "            \"title\": \"Spatial structure of Lch-alpha peptide from two-component lantibiotic system Lichenicidin VK21\",\n",
+        "            \"release_date\": \"20100721\",\n",
+        "            \"split_entry\": null,\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"nmr\"\n",
+        "            ],\n",
+        "            \"revision_date\": \"20110810\",\n",
+        "            \"entry_authors\": [\n",
+        "                \"Arseniev, A.S.\",\n",
+        "                \"Mineev, K.S.\",\n",
+        "                \"Ovchinnikova, T.V.\",\n",
+        "                \"Shenkarev, Z.O.\"\n",
+        "            ],\n",
+        "            \"deposition_site\": \"BMRB\",\n",
+        "            \"number_of_entities\": {\n",
+        "                \"water\": 0,\n",
+        "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
+        "                \"dna\": 0,\n",
+        "                \"ligand\": 0,\n",
+        "                \"dna/rna\": 0,\n",
+        "                \"rna\": 0,\n",
+        "                \"sugar\": 0\n",
+        "            },\n",
+        "            \"deposition_date\": \"20100205\",\n",
+        "            \"processing_site\": \"RCSB\"\n",
+        "        }\n",
+        "    ],\n",
+        "    \"1otz\": [\n",
+        "        {\n",
+        "            \"experimental_method\": [\n",
+        "                \"X-ray diffraction\"\n",
+        "            ],\n",
+        "            \"assemblies\": [\n",
+        "                {\n",
+        "                    \"form\": \"homo\",\n",
+        "                    \"name\": \"120-meric\",\n",
+        "                    \"assembly_id\": \"1\"\n",
+        "                }\n",
+        "            ],\n",
+        "            \"title\": \"Crystal structure of the BAFF-BAFF-R complex (part I)\",\n",
+        "            \"release_date\": \"20030506\",\n",
+        "            \"split_entry\": [\n",
+        "                \"1otz\",\n",
+        "                \"1p0t\"\n",
+        "            ],\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"x-ray\"\n",
+        "            ],\n",
+        "            \"revision_date\": \"20090224\",\n",
+        "            \"entry_authors\": [\n",
+        "                \"Kim, H.M.\",\n",
+        "                \"Kim, Y.S.\",\n",
+        "                \"Lee, H.\",\n",
+        "                \"Lee, J.-O.\",\n",
+        "                \"Lee, M.E.\",\n",
+        "                \"Paik, S.G.\",\n",
+        "                \"Shin, D.R.\",\n",
+        "                \"Yoo, O.J.\",\n",
+        "                \"Yu, K.S.\"\n",
+        "            ],\n",
+        "            \"deposition_site\": \"RCSB\",\n",
+        "            \"number_of_entities\": {\n",
+        "                \"water\": 0,\n",
+        "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
+        "                \"dna\": 0,\n",
+        "                \"ligand\": 1,\n",
+        "                \"dna/rna\": 0,\n",
+        "                \"rna\": 0,\n",
+        "                \"sugar\": 0\n",
+        "            },\n",
+        "            \"deposition_date\": \"20030323\",\n",
+        "            \"processing_site\": \"PDBJ\"\n",
+        "        }\n",
+        "    ]\n",
+        "}\n"
+       ]
+      }
+     ],
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
