--- a/notebooks/basic_calls.ipynb
+++ b/notebooks/basic_calls.ipynb
@@ -1,13 +1,20 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:37818438b0f73ec4330447b8062c7b5f52afd8aaac60c7dc78ed0bcc6eca7029"
+  "signature": "sha256:56b62047706e32e8572e90edbfd4406384556a0618754469c71f07874c5dab23"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# PDBe REST API 101"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -16,7 +23,7 @@
       "\n",
       "SERVER_URL = \"https://wwwdev.ebi.ac.uk/pdbe/api\"\n",
       "\n",
-      "def make_request(url, data):      \n",
+      "def make_request(url, data):   \n",
       "    request = urllib2.Request(url)\n",
       "\n",
       "    try:\n",
@@ -39,12 +46,14 @@
       "def post_request(url, data, pretty=True):\n",
       "    full_url = \"%s/%s/?pretty=%s\" % (SERVER_URL, url, str(pretty).lower())\n",
       "    \n",
+      "    if isinstance(data, (list, tuple)):\n",
+      "        data = \",\".join(data)\n",
+      "    \n",
       "    return make_request(full_url, data)\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 51
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -56,8 +65,14 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 52
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We can make GET resquests simply by doing:"
+     ]
     },
     {
      "cell_type": "code",
@@ -67,56 +82,14 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "{\n",
-        "    \"1cbs\": [\n",
-        "        {\n",
-        "            \"experimental_method\": [\n",
-        "                \"X-ray diffraction\"\n",
-        "            ],\n",
-        "            \"assemblies\": [\n",
-        "                {\n",
-        "                    \"form\": \"homo\",\n",
-        "                    \"name\": \"monomeric\",\n",
-        "                    \"assembly_id\": \"1\"\n",
-        "                }\n",
-        "            ],\n",
-        "            \"title\": \"CRYSTAL STRUCTURE OF CELLULAR RETINOIC-ACID-BINDING PROTEINS I AND II IN COMPLEX WITH ALL-TRANS-RETINOIC ACID AND A SYNTHETIC RETINOID\",\n",
-        "            \"release_date\": \"19950126\",\n",
-        "            \"split_entry\": null,\n",
-        "            \"experimental_method_class\": [\n",
-        "                \"x-ray\"\n",
-        "            ],\n",
-        "            \"revision_date\": \"20090224\",\n",
-        "            \"entry_authors\": [\n",
-        "                \"Bergfors, T.\",\n",
-        "                \"Jones, T.A.\",\n",
-        "                \"Kleywegt, G.J.\"\n",
-        "            ],\n",
-        "            \"deposition_site\": null,\n",
-        "            \"number_of_entities\": {\n",
-        "                \"water\": 1,\n",
-        "                \"polypeptide\": 1,\n",
-        "                \"other\": 0,\n",
-        "                \"dna\": 0,\n",
-        "                \"ligand\": 1,\n",
-        "                \"dna/rna\": 0,\n",
-        "                \"rna\": 0,\n",
-        "                \"sugar\": 0\n",
-        "            },\n",
-        "            \"deposition_date\": \"19940928\",\n",
-        "            \"processing_site\": null\n",
-        "        }\n",
-        "    ]\n",
-        "}\n"
-       ]
-      }
-     ],
-     "prompt_number": 53
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "POST requests passing a string:"
+     ]
     },
     {
      "cell_type": "code",
@@ -126,149 +99,38 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "{\n",
-        "    \"1cbs\": [\n",
-        "        {\n",
-        "            \"experimental_method\": [\n",
-        "                \"X-ray diffraction\"\n",
-        "            ],\n",
-        "            \"assemblies\": [\n",
-        "                {\n",
-        "                    \"form\": \"homo\",\n",
-        "                    \"name\": \"monomeric\",\n",
-        "                    \"assembly_id\": \"1\"\n",
-        "                }\n",
-        "            ],\n",
-        "            \"title\": \"CRYSTAL STRUCTURE OF CELLULAR RETINOIC-ACID-BINDING PROTEINS I AND II IN COMPLEX WITH ALL-TRANS-RETINOIC ACID AND A SYNTHETIC RETINOID\",\n",
-        "            \"release_date\": \"19950126\",\n",
-        "            \"split_entry\": null,\n",
-        "            \"experimental_method_class\": [\n",
-        "                \"x-ray\"\n",
-        "            ],\n",
-        "            \"revision_date\": \"20090224\",\n",
-        "            \"entry_authors\": [\n",
-        "                \"Bergfors, T.\",\n",
-        "                \"Jones, T.A.\",\n",
-        "                \"Kleywegt, G.J.\"\n",
-        "            ],\n",
-        "            \"deposition_site\": null,\n",
-        "            \"number_of_entities\": {\n",
-        "                \"water\": 1,\n",
-        "                \"polypeptide\": 1,\n",
-        "                \"other\": 0,\n",
-        "                \"dna\": 0,\n",
-        "                \"ligand\": 1,\n",
-        "                \"dna/rna\": 0,\n",
-        "                \"rna\": 0,\n",
-        "                \"sugar\": 0\n",
-        "            },\n",
-        "            \"deposition_date\": \"19940928\",\n",
-        "            \"processing_site\": null\n",
-        "        }\n",
-        "    ],\n",
-        "    \"2ktn\": [\n",
-        "        {\n",
-        "            \"experimental_method\": [\n",
-        "                \"Solution NMR\"\n",
-        "            ],\n",
-        "            \"assemblies\": [\n",
-        "                {\n",
-        "                    \"form\": \"homo\",\n",
-        "                    \"name\": \"monomeric\",\n",
-        "                    \"assembly_id\": \"1\"\n",
-        "                }\n",
-        "            ],\n",
-        "            \"title\": \"Spatial structure of Lch-alpha peptide from two-component lantibiotic system Lichenicidin VK21\",\n",
-        "            \"release_date\": \"20100721\",\n",
-        "            \"split_entry\": null,\n",
-        "            \"experimental_method_class\": [\n",
-        "                \"nmr\"\n",
-        "            ],\n",
-        "            \"revision_date\": \"20110810\",\n",
-        "            \"entry_authors\": [\n",
-        "                \"Arseniev, A.S.\",\n",
-        "                \"Mineev, K.S.\",\n",
-        "                \"Ovchinnikova, T.V.\",\n",
-        "                \"Shenkarev, Z.O.\"\n",
-        "            ],\n",
-        "            \"deposition_site\": \"BMRB\",\n",
-        "            \"number_of_entities\": {\n",
-        "                \"water\": 0,\n",
-        "                \"polypeptide\": 1,\n",
-        "                \"other\": 0,\n",
-        "                \"dna\": 0,\n",
-        "                \"ligand\": 0,\n",
-        "                \"dna/rna\": 0,\n",
-        "                \"rna\": 0,\n",
-        "                \"sugar\": 0\n",
-        "            },\n",
-        "            \"deposition_date\": \"20100205\",\n",
-        "            \"processing_site\": \"RCSB\"\n",
-        "        }\n",
-        "    ],\n",
-        "    \"1otz\": [\n",
-        "        {\n",
-        "            \"experimental_method\": [\n",
-        "                \"X-ray diffraction\"\n",
-        "            ],\n",
-        "            \"assemblies\": [\n",
-        "                {\n",
-        "                    \"form\": \"homo\",\n",
-        "                    \"name\": \"120-meric\",\n",
-        "                    \"assembly_id\": \"1\"\n",
-        "                }\n",
-        "            ],\n",
-        "            \"title\": \"Crystal structure of the BAFF-BAFF-R complex (part I)\",\n",
-        "            \"release_date\": \"20030506\",\n",
-        "            \"split_entry\": [\n",
-        "                \"1otz\",\n",
-        "                \"1p0t\"\n",
-        "            ],\n",
-        "            \"experimental_method_class\": [\n",
-        "                \"x-ray\"\n",
-        "            ],\n",
-        "            \"revision_date\": \"20090224\",\n",
-        "            \"entry_authors\": [\n",
-        "                \"Kim, H.M.\",\n",
-        "                \"Kim, Y.S.\",\n",
-        "                \"Lee, H.\",\n",
-        "                \"Lee, J.-O.\",\n",
-        "                \"Lee, M.E.\",\n",
-        "                \"Paik, S.G.\",\n",
-        "                \"Shin, D.R.\",\n",
-        "                \"Yoo, O.J.\",\n",
-        "                \"Yu, K.S.\"\n",
-        "            ],\n",
-        "            \"deposition_site\": \"RCSB\",\n",
-        "            \"number_of_entities\": {\n",
-        "                \"water\": 0,\n",
-        "                \"polypeptide\": 1,\n",
-        "                \"other\": 0,\n",
-        "                \"dna\": 0,\n",
-        "                \"ligand\": 1,\n",
-        "                \"dna/rna\": 0,\n",
-        "                \"rna\": 0,\n",
-        "                \"sugar\": 0\n",
-        "            },\n",
-        "            \"deposition_date\": \"20030323\",\n",
-        "            \"processing_site\": \"PDBJ\"\n",
-        "        }\n",
-        "    ]\n",
-        "}\n"
-       ]
-      }
-     ],
-     "prompt_number": 54
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "A list:"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "print post_request(summary, [\"1cbs\", \"1otz\", \"2ktn\"])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Or a tuple:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print post_request(summary, (\"1cbs\", \"1otz\", \"2ktn\"))"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
