--- a/notebooks/basic101.ipynb
+++ b/notebooks/basic101.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:56b62047706e32e8572e90edbfd4406384556a0618754469c71f07874c5dab23"
+  "signature": "sha256:6d22410ed26e3a2836200e1948cdc5d7c2b4b86fc810eb35ca175be5f0fcbdde"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +19,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import urllib2\n",
+      "import sys\n",
+      "\n",
+      "PY3 = sys.version > '3'\n",
+      "\n",
+      "if PY3:\n",
+      "    import urllib.request as urllib2\n",
+      "else:\n",
+      "    import urllib2\n",
       "\n",
       "SERVER_URL = \"https://wwwdev.ebi.ac.uk/pdbe/api\"\n",
       "\n",
@@ -36,7 +43,7 @@
       "\n",
       "        return None\n",
       "\n",
-      "    return url_file.read()\n",
+      "    return url_file.read().decode()\n",
       "\n",
       "def get_request(url, arg, pretty=True):\n",
       "    full_url = \"%s/%s/%s?pretty=%s\" % (SERVER_URL, url, arg, str(pretty).lower())\n",
@@ -49,7 +56,7 @@
       "    if isinstance(data, (list, tuple)):\n",
       "        data = \",\".join(data)\n",
       "    \n",
-      "    return make_request(full_url, data)\n"
+      "    return make_request(full_url, data.encode())\n"
      ],
      "language": "python",
      "metadata": {},
@@ -59,9 +66,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "summary = \"/pdb/entry/summary/\"\n",
-      "experiment = \"/pdb/entry/experiment/\"\n",
-      "sifts = \"/mappings/\""
+      "summary = \"/pdb/entry/summary\"\n",
+      "experiment = \"/pdb/entry/experiment\"\n",
+      "sifts = \"/mappings\""
      ],
      "language": "python",
      "metadata": {},
@@ -131,6 +138,14 @@
      "input": [
       "print post_request(summary, (\"1cbs\", \"1otz\", \"2ktn\"))"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
