--- a/notebooks/basic101.ipynb
+++ b/notebooks/basic101.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7fab92354d60594a23c533fbe80f16c435d68d961462b5f0e26c1c867a2cd8b3"
+  "signature": "sha256:434e3547cd06911a322c4365c23614104c19a42c555d895ceb9f7a85eb109355"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -37,9 +37,9 @@
       "        url_file = urllib2.urlopen(request, data)\n",
       "    except urllib2.HTTPError as e:\n",
       "        if e.code == 404:\n",
-      "            print \"[NOTFOUND %d] %s\" % (e.code, url)\n",
+      "            print(\"[NOTFOUND %d] %s\" % (e.code, url))\n",
       "        else:\n",
-      "            print \"[ERROR %d] %s\" % (e.code, url)\n",
+      "            print(\"[ERROR %d] %s\" % (e.code, url))\n",
       "\n",
       "        return None\n",
       "\n",
@@ -61,7 +61,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -74,7 +74,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -87,7 +87,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print get_request(summary, \"1cbs\")"
+      "print(get_request(summary, \"1cbs\"))"
      ],
      "language": "python",
      "metadata": {},
@@ -140,7 +140,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -153,24 +153,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print post_request(summary, \"1cbs, 1otz, 2ktn\")"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "A list:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print post_request(summary, [\"1cbs\", \"1otz\", \"2ktn\"])"
+      "print(post_request(summary, \"1cbs, 1otz, 2ktn\"))"
      ],
      "language": "python",
      "metadata": {},
@@ -311,7 +294,161 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "A list:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print(post_request(summary, [\"1cbs\", \"1otz\", \"2ktn\"]))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{\n",
+        "    \"1cbs\": [\n",
+        "        {\n",
+        "            \"experimental_method\": [\n",
+        "                \"X-ray diffraction\"\n",
+        "            ],\n",
+        "            \"assemblies\": [\n",
+        "                {\n",
+        "                    \"form\": \"homo\",\n",
+        "                    \"name\": \"monomeric\",\n",
+        "                    \"assembly_id\": \"1\"\n",
+        "                }\n",
+        "            ],\n",
+        "            \"title\": \"CRYSTAL STRUCTURE OF CELLULAR RETINOIC-ACID-BINDING PROTEINS I AND II IN COMPLEX WITH ALL-TRANS-RETINOIC ACID AND A SYNTHETIC RETINOID\",\n",
+        "            \"release_date\": \"19950126\",\n",
+        "            \"split_entry\": null,\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"x-ray\"\n",
+        "            ],\n",
+        "            \"revision_date\": \"20090224\",\n",
+        "            \"entry_authors\": [\n",
+        "                \"Bergfors, T.\",\n",
+        "                \"Jones, T.A.\",\n",
+        "                \"Kleywegt, G.J.\"\n",
+        "            ],\n",
+        "            \"deposition_site\": null,\n",
+        "            \"number_of_entities\": {\n",
+        "                \"water\": 1,\n",
+        "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
+        "                \"dna\": 0,\n",
+        "                \"ligand\": 1,\n",
+        "                \"dna/rna\": 0,\n",
+        "                \"rna\": 0,\n",
+        "                \"sugar\": 0\n",
+        "            },\n",
+        "            \"deposition_date\": \"19940928\",\n",
+        "            \"processing_site\": null\n",
+        "        }\n",
+        "    ],\n",
+        "    \"2ktn\": [\n",
+        "        {\n",
+        "            \"experimental_method\": [\n",
+        "                \"Solution NMR\"\n",
+        "            ],\n",
+        "            \"assemblies\": [\n",
+        "                {\n",
+        "                    \"form\": \"homo\",\n",
+        "                    \"name\": \"monomeric\",\n",
+        "                    \"assembly_id\": \"1\"\n",
+        "                }\n",
+        "            ],\n",
+        "            \"title\": \"Spatial structure of Lch-alpha peptide from two-component lantibiotic system Lichenicidin VK21\",\n",
+        "            \"release_date\": \"20100721\",\n",
+        "            \"split_entry\": null,\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"nmr\"\n",
+        "            ],\n",
+        "            \"revision_date\": \"20110810\",\n",
+        "            \"entry_authors\": [\n",
+        "                \"Arseniev, A.S.\",\n",
+        "                \"Mineev, K.S.\",\n",
+        "                \"Ovchinnikova, T.V.\",\n",
+        "                \"Shenkarev, Z.O.\"\n",
+        "            ],\n",
+        "            \"deposition_site\": \"BMRB\",\n",
+        "            \"number_of_entities\": {\n",
+        "                \"water\": 0,\n",
+        "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
+        "                \"dna\": 0,\n",
+        "                \"ligand\": 0,\n",
+        "                \"dna/rna\": 0,\n",
+        "                \"rna\": 0,\n",
+        "                \"sugar\": 0\n",
+        "            },\n",
+        "            \"deposition_date\": \"20100205\",\n",
+        "            \"processing_site\": \"RCSB\"\n",
+        "        }\n",
+        "    ],\n",
+        "    \"1otz\": [\n",
+        "        {\n",
+        "            \"experimental_method\": [\n",
+        "                \"X-ray diffraction\"\n",
+        "            ],\n",
+        "            \"assemblies\": [\n",
+        "                {\n",
+        "                    \"form\": \"homo\",\n",
+        "                    \"name\": \"120-meric\",\n",
+        "                    \"assembly_id\": \"1\"\n",
+        "                }\n",
+        "            ],\n",
+        "            \"title\": \"Crystal structure of the BAFF-BAFF-R complex (part I)\",\n",
+        "            \"release_date\": \"20030506\",\n",
+        "            \"split_entry\": [\n",
+        "                \"1otz\",\n",
+        "                \"1p0t\"\n",
+        "            ],\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"x-ray\"\n",
+        "            ],\n",
+        "            \"revision_date\": \"20090224\",\n",
+        "            \"entry_authors\": [\n",
+        "                \"Kim, H.M.\",\n",
+        "                \"Kim, Y.S.\",\n",
+        "                \"Lee, H.\",\n",
+        "                \"Lee, J.-O.\",\n",
+        "                \"Lee, M.E.\",\n",
+        "                \"Paik, S.G.\",\n",
+        "                \"Shin, D.R.\",\n",
+        "                \"Yoo, O.J.\",\n",
+        "                \"Yu, K.S.\"\n",
+        "            ],\n",
+        "            \"deposition_site\": \"RCSB\",\n",
+        "            \"number_of_entities\": {\n",
+        "                \"water\": 0,\n",
+        "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
+        "                \"dna\": 0,\n",
+        "                \"ligand\": 1,\n",
+        "                \"dna/rna\": 0,\n",
+        "                \"rna\": 0,\n",
+        "                \"sugar\": 0\n",
+        "            },\n",
+        "            \"deposition_date\": \"20030323\",\n",
+        "            \"processing_site\": \"PDBJ\"\n",
+        "        }\n",
+        "    ]\n",
+        "}\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -324,11 +461,148 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print post_request(summary, (\"1cbs\", \"1otz\", \"2ktn\"))"
+      "print(post_request(summary, (\"1cbs\", \"1otz\", \"2ktn\")))"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{\n",
+        "    \"1cbs\": [\n",
+        "        {\n",
+        "            \"experimental_method\": [\n",
+        "                \"X-ray diffraction\"\n",
+        "            ],\n",
+        "            \"assemblies\": [\n",
+        "                {\n",
+        "                    \"form\": \"homo\",\n",
+        "                    \"name\": \"monomeric\",\n",
+        "                    \"assembly_id\": \"1\"\n",
+        "                }\n",
+        "            ],\n",
+        "            \"title\": \"CRYSTAL STRUCTURE OF CELLULAR RETINOIC-ACID-BINDING PROTEINS I AND II IN COMPLEX WITH ALL-TRANS-RETINOIC ACID AND A SYNTHETIC RETINOID\",\n",
+        "            \"release_date\": \"19950126\",\n",
+        "            \"split_entry\": null,\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"x-ray\"\n",
+        "            ],\n",
+        "            \"revision_date\": \"20090224\",\n",
+        "            \"entry_authors\": [\n",
+        "                \"Bergfors, T.\",\n",
+        "                \"Jones, T.A.\",\n",
+        "                \"Kleywegt, G.J.\"\n",
+        "            ],\n",
+        "            \"deposition_site\": null,\n",
+        "            \"number_of_entities\": {\n",
+        "                \"water\": 1,\n",
+        "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
+        "                \"dna\": 0,\n",
+        "                \"ligand\": 1,\n",
+        "                \"dna/rna\": 0,\n",
+        "                \"rna\": 0,\n",
+        "                \"sugar\": 0\n",
+        "            },\n",
+        "            \"deposition_date\": \"19940928\",\n",
+        "            \"processing_site\": null\n",
+        "        }\n",
+        "    ],\n",
+        "    \"2ktn\": [\n",
+        "        {\n",
+        "            \"experimental_method\": [\n",
+        "                \"Solution NMR\"\n",
+        "            ],\n",
+        "            \"assemblies\": [\n",
+        "                {\n",
+        "                    \"form\": \"homo\",\n",
+        "                    \"name\": \"monomeric\",\n",
+        "                    \"assembly_id\": \"1\"\n",
+        "                }\n",
+        "            ],\n",
+        "            \"title\": \"Spatial structure of Lch-alpha peptide from two-component lantibiotic system Lichenicidin VK21\",\n",
+        "            \"release_date\": \"20100721\",\n",
+        "            \"split_entry\": null,\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"nmr\"\n",
+        "            ],\n",
+        "            \"revision_date\": \"20110810\",\n",
+        "            \"entry_authors\": [\n",
+        "                \"Arseniev, A.S.\",\n",
+        "                \"Mineev, K.S.\",\n",
+        "                \"Ovchinnikova, T.V.\",\n",
+        "                \"Shenkarev, Z.O.\"\n",
+        "            ],\n",
+        "            \"deposition_site\": \"BMRB\",\n",
+        "            \"number_of_entities\": {\n",
+        "                \"water\": 0,\n",
+        "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
+        "                \"dna\": 0,\n",
+        "                \"ligand\": 0,\n",
+        "                \"dna/rna\": 0,\n",
+        "                \"rna\": 0,\n",
+        "                \"sugar\": 0\n",
+        "            },\n",
+        "            \"deposition_date\": \"20100205\",\n",
+        "            \"processing_site\": \"RCSB\"\n",
+        "        }\n",
+        "    ],\n",
+        "    \"1otz\": [\n",
+        "        {\n",
+        "            \"experimental_method\": [\n",
+        "                \"X-ray diffraction\"\n",
+        "            ],\n",
+        "            \"assemblies\": [\n",
+        "                {\n",
+        "                    \"form\": \"homo\",\n",
+        "                    \"name\": \"120-meric\",\n",
+        "                    \"assembly_id\": \"1\"\n",
+        "                }\n",
+        "            ],\n",
+        "            \"title\": \"Crystal structure of the BAFF-BAFF-R complex (part I)\",\n",
+        "            \"release_date\": \"20030506\",\n",
+        "            \"split_entry\": [\n",
+        "                \"1otz\",\n",
+        "                \"1p0t\"\n",
+        "            ],\n",
+        "            \"experimental_method_class\": [\n",
+        "                \"x-ray\"\n",
+        "            ],\n",
+        "            \"revision_date\": \"20090224\",\n",
+        "            \"entry_authors\": [\n",
+        "                \"Kim, H.M.\",\n",
+        "                \"Kim, Y.S.\",\n",
+        "                \"Lee, H.\",\n",
+        "                \"Lee, J.-O.\",\n",
+        "                \"Lee, M.E.\",\n",
+        "                \"Paik, S.G.\",\n",
+        "                \"Shin, D.R.\",\n",
+        "                \"Yoo, O.J.\",\n",
+        "                \"Yu, K.S.\"\n",
+        "            ],\n",
+        "            \"deposition_site\": \"RCSB\",\n",
+        "            \"number_of_entities\": {\n",
+        "                \"water\": 0,\n",
+        "                \"polypeptide\": 1,\n",
+        "                \"other\": 0,\n",
+        "                \"dna\": 0,\n",
+        "                \"ligand\": 1,\n",
+        "                \"dna/rna\": 0,\n",
+        "                \"rna\": 0,\n",
+        "                \"sugar\": 0\n",
+        "            },\n",
+        "            \"deposition_date\": \"20030323\",\n",
+        "            \"processing_site\": \"PDBJ\"\n",
+        "        }\n",
+        "    ]\n",
+        "}\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
