pretty=False by default

--- a/notebooks/basic101.ipynb
+++ b/notebooks/basic101.ipynb
@@ -45,12 +45,12 @@
       "\n",
       "    return url_file.read().decode()\n",
       "\n",
-      "def get_request(url, arg, pretty=True):\n",
+      "def get_request(url, arg, pretty=False):\n",
       "    full_url = \"%s/%s/%s?pretty=%s\" % (SERVER_URL, url, arg, str(pretty).lower())\n",
       "    \n",
       "    return make_request(full_url, None)\n",
       "\n",
-      "def post_request(url, data, pretty=True):\n",
+      "def post_request(url, data, pretty=False):\n",
       "    full_url = \"%s/%s/?pretty=%s\" % (SERVER_URL, url, str(pretty).lower())\n",
       "    \n",
       "    if isinstance(data, (list, tuple)):\n",
@@ -85,7 +85,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(get_request(summary, \"1cbs\"))"
+      "print(get_request(summary, \"1cbs\", True))"
      ],
      "language": "python",
      "metadata": {},
@@ -102,7 +102,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(post_request(summary, \"1cbs, 1otz, 2ktn\"))"
+      "print(post_request(summary, \"1cbs, 1otz, 2ktn\", True))"
      ],
      "language": "python",
      "metadata": {},
@@ -119,7 +119,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(post_request(summary, [\"1cbs\", \"1otz\", \"2ktn\"]))"
+      "print(post_request(summary, [\"1cbs\", \"1otz\", \"2ktn\"], True))"
      ],
      "language": "python",
      "metadata": {},
@@ -147,6 +147,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Please note that we have not used the pretty=True argument in the last request. This is the best way to access the REST API programatically as, by eliminating all the whitespaces, you will save bandwidth and, therefore, time.\n",
+      "\n",
       "The response is a string that can be parsed into a Python dictionary using the json module:"
      ]
     },
@@ -175,6 +177,14 @@
       "print(entries[\"1cbs\"][0][\"experimental_method\"])\n",
       "print(entries[\"1cbs\"][0][\"entry_authors\"])"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
