--- a/notebooks/search_introduction.ipynb
+++ b/notebooks/search_introduction.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cde3ed68cdaa706dd2adb3d3c8aaa89262f383ff3ac0dcd4455f803fede24601"
+  "signature": "sha256:73183ef0c36f0a0e03a7d39683a2ff48e3263a4e3eed395910520180567f99d3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -87,23 +87,41 @@
      "prompt_number": 59
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "There are 3 documents in Solr response for a single PDB id, and each has >75 fields. At this juncture, it is essential to understand what the document represents and contains before proceeding further."
+     ]
+    },
+    {
      "cell_type": "heading",
      "level": 1,
      "metadata": {},
      "source": [
-      "Solr features and document fields"
+      "Entity document"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There are 3 documents in Solr response for a single PDB id, and each has >75 fields. At this juncture, it is essential to understand what the document represent and contains before proceeding further.\n",
-      "\n",
       "PDBe Solr instance serves documents based on polymeric entities in PDB entries, i.e. each document indexed by Solr represents polymeric molecules of type protein, sugar, DNA, RNA or DNA/RNA hybrid. This is why for entry 2qk9 we get 3 documents in the response, each representing the protein, RNA and DNA molecule in that entry.\n",
       "\n",
-      "Fields in PDBe's entity-based Solr document cover a wide range of properties, such as entry's experimental details, details of deposition and primary publication, entity's taxonomy, entry's quality, entity's cross references to UniProt and popular domain databases, biological assembly, etc. They are documented here: http://wwwdev.ebi.ac.uk/pdbe/api/doc/search.html\n",
-      "\n",
+      "Fields in PDBe's entity-based Solr document cover a wide range of properties, such as entry's experimental details, details of deposition and primary publication, entity's taxonomy, entry's quality, entity's cross references to UniProt and popular domain databases, biological assembly, etc. They are documented here: http://wwwdev.ebi.ac.uk/pdbe/api/doc/search.html"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Solr features"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "It is also useful now to understand a little more about Solr querying. Solr has a rich and complex query syntax, described at http://wiki.apache.org/solr/CommonQueryParameters and elsewhere.\n",
       "\n",
       "The fields of immediate relevance to us in this tutorial are:\n",
@@ -112,8 +130,7 @@
       " * fl - fields returned in each document. This is useful to reduce the size of response.\n",
       "\n",
       "Solr capabilities combined with the wide-ranging description in entity document can help us write really powerful Solr queries to find precisely the entries or polymers of interest.\n",
-      "\n",
-      "Armed with this information, now let us write a query to find entities containing a Pfam domain called \"Lipocalin\" in X-ray entries of decent resolution."
+      "\n"
      ]
     },
     {
@@ -122,6 +139,13 @@
      "metadata": {},
      "source": [
       "Examples"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now let us write a query to find entities containing a Pfam domain called \"Lipocalin\" in X-ray entries of decent resolution."
      ]
     },
     {
@@ -168,7 +192,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let us narrow down by organism."
+      "Let us narrow down to proteins of human origin."
      ]
     },
     {
@@ -204,7 +228,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let us look for entries from Kleywegt."
+      "Let us look for entries deposited by Kleywegt."
      ]
     },
     {
@@ -235,7 +259,7 @@
        ]
       }
      ],
-     "prompt_number": 62
+     "prompt_number": 64
     },
     {
      "cell_type": "heading",
