--- a/notebooks/search_introduction.ipynb
+++ b/notebooks/search_introduction.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:73183ef0c36f0a0e03a7d39683a2ff48e3263a4e3eed395910520180567f99d3"
+  "signature": "sha256:4754c45a163f00822bc39e7081658cb793a0ac6eac2f9777140f4a54a1f27a25"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -145,7 +145,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now let us write a query to find entities containing a Pfam domain called \"Lipocalin\" in X-ray entries of decent resolution."
+      "Now let us write a query to find entities containing a Pfam domain called \"Lipocalin\" in X-ray entries of decent resolution (1&Aring; - 2&Aring;)."
      ]
     },
     {
