--- a/notebooks/tutorial_utils.ipynb
+++ b/notebooks/tutorial_utils.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6e4f83f573e1f401ddf69f659274dee5ae6e220c12ea5b1eacd9a2cb8c450a3d"
+  "signature": "sha256:edb7573496142fa1568b286b58fa094bf7bba760b23353c43d3063e253e852f4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook is a collection of useful functions used in notebooks."
+      "This notebook is a collection of useful functions used in other notebooks."
      ]
     },
     {
@@ -47,7 +47,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -64,13 +64,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "At the time of writing this notebook (Nov 2014), the API was not released on www. So let us use the wwwdev instance, otherwise just comment the line above."
+      "At the time of writing this notebook (Nov 2014), the API was not released on www. So let us use the wwwdev instance, otherwise just comment out the line above.\n",
+      "\n",
+      "Browse the API documentation interactively at <code>PDBE_API_URL + \"/doc\"</code>, i.e. http://wwwdev.ebi.ac.uk/pdbe/api/doc"
      ]
     },
     {
@@ -105,7 +108,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 9
     },
     {
      "cell_type": "heading",
@@ -119,7 +122,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Call API and get python objects from returned json. Make multiple API calls if required."
+      "The API call you made can fail (very rarely) due to a variety of reasons beyond your control, e.g. network, overloading of our http servers, temporary failure of our databases, etc. Hence it is always more robust to try the call, say thrice, before raising an exception, or reporting a bug to the PDBe. Let us write a function for this which will return python object for equivalent to the json returned by the API."
      ]
     },
     {
@@ -134,13 +137,14 @@
       "        try :\n",
       "            return json.loads(urllib2.urlopen(api_url).read())\n",
       "        except Exception, err :\n",
-      "            logging.warn(\"Error fetching PDBe-API data! Trial number %d for call %s.\" % (trial_number, api_url))\n",
+      "            logging.warn(\"Error fetching PDBe-API data! Trial number %d for call %s\" % (trial_number, api_url))\n",
       "            if trial_number == num_trials-1 :\n",
       "                raise err"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 10
     }
    ],
    "metadata": {}
